--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   wifi_iot: ^0.3.15+2
+  intl: ^0.17.0
+  file_picker: ^4.5.1
 
 dev_dependencies:
   flutter_test:
