--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/the_mini_vandals.mp3
+    - assets/levelup.wav
+    - assets/android.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
