--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
-        android:label="flutter_wifi_udp"
+        android:label="UDP data trans"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
