--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   wifi_iot: ^0.3.15+2
   intl: ^0.17.0
   file_picker: ^4.5.1
+  sn_progress_dialog: ^1.0.8
 
 dev_dependencies:
   flutter_test:
