--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   file_picker: ^4.5.1
   sn_progress_dialog: ^1.0.8
   wifi_iot: ^0.3.16
+  ftpconnect: ^2.0.2
 
 dev_dependencies:
   flutter_test:
