Added connection timeout in connect page
Signed-off-by: Shawn Lu <lu.shangchiun@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sn_progress_dialog: ^1.0.8
   wifi_iot: ^0.3.16
   ftpconnect: ^2.0.2
+  path_provider: ^2.0.11
 
 
 dev_dependencies:
