--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   ftpconnect: ^2.0.2
   path_provider: ^2.0.11
   fluttertoast: ^8.1.1
+  flutter_blue_plus: ^1.3.1
 
 
 dev_dependencies:
