--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.0.11
   fluttertoast: ^8.1.1
   flutter_blue_plus: ^1.3.1
+  network_info_plus: ^3.0.1
 
 
 dev_dependencies:
