--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   fluttertoast: ^8.1.1
   flutter_blue_plus: ^1.3.1
   network_info_plus: ^3.0.1
+  connectivity_plus: ^3.0.2
 
 
 dev_dependencies:
