Package id refactored

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
        android:usesCleartextTraffic="true"
        >
         <activity
-            android:name=".MainActivity"
+            android:name="com.koso.flasher.MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
